@@ -5,7 +5,8 @@
 \title{Convert a \code{data.tree} structure to an igraph network}
 \usage{
 as.igraph.Node(node, vertexAttributes = character(),
-  edgeAttributes = character(), directed = FALSE)
+  edgeAttributes = character(), directed = FALSE, direction = c("climb",
+  "descend"))
 }
 \arguments{
 \item{node}{The root \code{Node} to convert}
@@ -17,6 +18,8 @@ in the \code{data.tree} structure to add as attributes to the vertices of the ig
 in the \code{data.tree} structure to add as edge attributes of the igraph}
 
 \item{directed}{Logical scalar, whether or not to create a directed graph.}
+
+\item{direction}{when converting to a network, should the edges point from root to children ("climb") or from child to parent ("descend")?}
 }
 \value{
 an \code{igraph} object
